--- a/MyApp/www/juegos/Drag/index.html
+++ b/MyApp/www/juegos/Drag/index.html
@@ -62,7 +62,7 @@
                             </a>
                             <hr>
                             <a href="icmpv6.html">
-                               <button id="icmpv6" class="btn btn-default">icmpv6</button>
+                               <button id="ICMPv6" class="btn btn-default">ICMPv6</button>
                             </a>
                             <hr>
                         </div>
