--- a/MyApp/www/juegos/Drag/ipv4.html
+++ b/MyApp/www/juegos/Drag/ipv4.html
@@ -48,7 +48,7 @@
               <div class="game-info">
              <!--  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore culpa, consequatur ab reprehenderit reiciendis laudantium atque. Provident blanditiis voluptatem, corporis! Esse laboriosam voluptatem neque. Praesentium rem illum, molestias voluptatibus facilis.</p> -->
                 <div class="level-difficulty">
-                    <h4>Choose a Topic!</h4>
+                    <h4>Choose a Level!</h4>
                     <button id="level1" type="submit" class="btn btn-default">Easy</button>
                     <p>There will be betweennine(9) and ten(10) already filled boxes</p>
                     <hr>
