--- a/MyApp/www/index.html
+++ b/MyApp/www/index.html
@@ -29,7 +29,7 @@
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h4 class="modal-title" id="aboutModalLabel">IMPORTANT:</h4>
+              <h4 class="modal-title" id="aboutModalLabel">OPTIONAL:</h4>
             </div>
             <div class="modal-body">
               <div class="text-center">
