--- a/MyApp/www/juegos/Drag/icmpv6.html
+++ b/MyApp/www/juegos/Drag/icmpv6.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
 
-    <title>icmpv6</title>
+    <title>ICMPv6</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
@@ -44,7 +44,7 @@
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h2 class="modal-title" id="levelModalLabel">icmpv6</h2>
+              <h2 class="modal-title" id="levelModalLabel">ICMPv6</h2>
             </div>
             <div class="modal-body">
               <div class="game-info">
@@ -156,15 +156,15 @@
       </div>
 
       <div id="boxudp" class="text-center">
-			<input id="icmpv6-0" class="col-xs-12 col-sm-12 col-md-12 input" disabled="disabled"> 
-			<input id="icmpv6-1" class="col-xs-3 col-sm-3 col-md-3 input" disabled="disabled"> 
-			<input id="icmpv6-2" class="col-xs-3 col-sm-3 col-md-3 input" disabled="disabled"> 
-			<input id="icmpv6-3" class="col-xs-3 col-sm-3 col-md-3 input" disabled="disabled">
-			<input id="icmpv6-4" class="col-xs-3 col-sm-3 col-md-3 input" disabled="disabled"> 
-			<input id="icmpv6-5" class="col-xs-3 col-sm-3 col-md-3 input" disabled="disabled"> 
-			<input id="icmpv6-6" class="col-xs-3 col-sm-3 col-md-3 input" disabled="disabled"> 
-			<input id="icmpv6-7" class="col-xs-6 col-sm-6 col-md-6 input" disabled="disabled"> 
-			<input id="icmpv6-8" class="col-xs-12 col-sm-12 col-md-12 input" disabled="disabled"> 		
+			<input id="ICMPv6-0" class="col-xs-12 col-sm-12 col-md-12 input" disabled="disabled"> 
+			<input id="ICMPv6-1" class="col-xs-3 col-sm-3 col-md-3 input" disabled="disabled"> 
+			<input id="ICMPv6-2" class="col-xs-3 col-sm-3 col-md-3 input" disabled="disabled"> 
+			<input id="ICMPv6-3" class="col-xs-3 col-sm-3 col-md-3 input" disabled="disabled">
+			<input id="ICMPv6-4" class="col-xs-3 col-sm-3 col-md-3 input" disabled="disabled"> 
+			<input id="ICMPv6-5" class="col-xs-3 col-sm-3 col-md-3 input" disabled="disabled"> 
+			<input id="ICMPv6-6" class="col-xs-3 col-sm-3 col-md-3 input" disabled="disabled"> 
+			<input id="ICMPv6-7" class="col-xs-6 col-sm-6 col-md-6 input" disabled="disabled"> 
+			<input id="ICMPv6-8" class="col-xs-12 col-sm-12 col-md-12 input" disabled="disabled"> 		
 	</div>
 
       <div id="pregunta">
