--- a/MyApp/www/juegos/Drag/index-es.html
+++ b/MyApp/www/juegos/Drag/index-es.html
@@ -61,8 +61,8 @@
                                <button id="Ethernet" class="btn btn-default">Ethernet </button>
                             </a>
                             <hr>
-                            <a href="icmpv6-es.html">
-                               <button id="icmpv6" class="btn btn-default">icmpv6</button>
+                            <a href="ICMPv6-es.html">
+                               <button id="ICMPv6" class="btn btn-default">ICMPv6</button>
                             </a>
                             <hr>
                         </div>
