--- a/MyApp/www/index.html
+++ b/MyApp/www/index.html
@@ -37,7 +37,8 @@
                 <hr>
                 <!-- <button class="BtRegister">Register</button> -->
                 <button class="LoginFB">Login with Facebook</button>
-                  <button class="LoginTwitter">Login with Twitter</button>
+                <button class="LoginTwitter">Login with Twitter</button>
+                <button class="LoginInstagram">Login with Instagram</button>
               </div>
             </div>
             <div class="modal-footer">
@@ -157,31 +158,6 @@
                   </li>
                   <li class="but">
                     <div class="title">
-                      <h3>Flying Discs <i class="fa fa-angle-down"></i></h3>
-                      <a href="juegos/discos/index.html">
-                        <p class="animate">
-                          <span>Play it</span>
-                        </p>
-                        <i class="fa fa-play-circle"></i>
-                      </a href="">
-                    </div>
-                    <ul class="detail" >
-                      <li>
-                        <div class="col-img">
-                          <img class="img-responsive" src="img/disco.png">
-                        </div>
-                        <div class="col-text">
-                          <!-- <h5>LOREM IPSUM DOLOR SIT AMET, CONSECTETUR ADIPISICING ELIT</h5> -->
-                          <p>
-                            The aim of this game is to select the corresponding disc according to the instructions given on the screen. Another way to test your skills.
-                          </p>
-                        </div>
-                      </li>
-                    </ul>
-                  </li>
-
-                  <li class="but">
-                    <div class="title">
                       <h3>Output interpreter <i class="fa fa-angle-down"></i></h3>
                       <a href="juegos/trivia/index.html">
                         <p class="animate">
@@ -205,6 +181,32 @@
                       </li>
                     </ul>
                   </li>
+                  <li class="but">
+                    <div class="title">
+                      <h3>Flying Discs <i class="fa fa-angle-down"></i></h3>
+                      <a href="juegos/discos/index.html">
+                        <p class="animate">
+                          <span>Play it</span>
+                        </p>
+                        <i class="fa fa-play-circle"></i>
+                      </a href="">
+                    </div>
+                    <ul class="detail" >
+                      <li>
+                        <div class="col-img">
+                          <img class="img-responsive" src="img/disco.png">
+                        </div>
+                        <div class="col-text">
+                          <!-- <h5>LOREM IPSUM DOLOR SIT AMET, CONSECTETUR ADIPISICING ELIT</h5> -->
+                          <p>
+                            The aim of this game is to select the corresponding disc according to the instructions given on the screen. Another way to test your skills.
+                          </p>
+                        </div>
+                      </li>
+                    </ul>
+                  </li>
+
+                  
 
                 </ul>
 
