listo login instagram, inciiado cambios trivia!

--- a/MyApp/www/index-es.html
+++ b/MyApp/www/index-es.html
@@ -38,6 +38,7 @@
                 <!-- <button class="BtRegister">Register</button> -->
                 <button class="LoginFB">Login con Facebook</button>
                   <button class="LoginTwitter">Login con Twitter</button>
+                <button class="LoginInstagram">Login con Instagram</button>
               </div>
             </div>
             <div class="modal-footer">
@@ -85,11 +86,7 @@
                   <li class="but">
                     <div class="title">
                       <h3>Memoria <i class="fa fa-angle-down"></i></h3>
-                      <a href="juegos/Memoria/index-es.html">
-                        <p class="animate">
-                          <span>Jugar</span>
-                          
-                        </p>
+                      <a href="juegos/Memoria/index-es.html">                       
                         <i class="fa fa-play-circle"></i>
                       </a href="">
                     </div>
@@ -112,9 +109,6 @@
                     <div class="title">
                       <h3>Drag <i class="fa fa-angle-down"></i></h3>
                       <a href="juegos/Drag/index-es.html">
-                        <p class="animate">
-                          <span>Jugar</span>                      
-                        </p>
                         <i class="fa fa-play-circle"></i>
                       </a href="">
                     </div>
@@ -137,9 +131,6 @@
                     <div class="title">
                       <h3>Crucigrama <i class="fa fa-angle-down"></i></h3>
                       <a href="juegos/crucigrama/index-es.html">
-                        <p class="animate">
-                          <span>Jugar</span>                      
-                        </p>
                         <i class="fa fa-play-circle"></i>
                       </a href="">
                     </div>
@@ -161,9 +152,6 @@
                     <div class="title">
                       <h3>Intérprete la salida <i class="fa fa-angle-down"></i></h3>
                       <a href="juegos/trivia/index-es.html">
-                        <p class="animate">
-                          <span>Jugar</span>                      
-                        </p>
                         <i class="fa fa-play-circle"></i>
                       </a href="">
                     </div>
@@ -185,9 +173,6 @@
                     <div class="title">
                       <h3>Discos <i class="fa fa-angle-down"></i></h3>
                       <a href="juegos/discos/index-es.html">
-                        <p class="animate">
-                          <span>Jugar</span>                      
-                        </p>
                         <i class="fa fa-play-circle"></i>
                       </a href="">
                     </div>
