--- a/MyApp/www/index-por.html
+++ b/MyApp/www/index-por.html
@@ -39,6 +39,7 @@ Por favor, faça o login com sua rede social preferida para acompanhar seu progr
                 <!-- <button class="BtRegister">Register</button> -->
                 <button class="LoginFB">Entrar com Facebook</button>
                   <button class="LoginTwitter">Entrar com Twitter</button>
+                <button class="LoginInstagram">Entrar com Instagram</button>
               </div>
             </div>
             <div class="modal-footer">
@@ -88,10 +89,6 @@ Informação de usuário:</h4>
                     <div class="title">
                       <h3>Memória <i class="fa fa-angle-down"></i></h3>
                       <a href="juegos/Memoria/index-por.html">
-                        <p class="animate">
-                          <span>Jogar</span>
-                          
-                        </p>
                         <i class="fa fa-play-circle"></i>
                       </a href="">
                     </div>
@@ -114,9 +111,6 @@ Informação de usuário:</h4>
                     <div class="title">
                       <h3>Drag <i class="fa fa-angle-down"></i></h3>
                       <a href="juegos/Drag/index-por.html">
-                        <p class="animate">
-                          <span>Jogar</span>                      
-                        </p>
                         <i class="fa fa-play-circle"></i>
                       </a href="">
                     </div>
@@ -139,9 +133,6 @@ Informação de usuário:</h4>
                     <div class="title">
                       <h3>Palavras cruzadas<i class="fa fa-angle-down"></i></h3>
                       <a href="juegos/crucigrama/index-por.html">
-                        <p class="animate">
-                          <span>Jogar</span>                      
-                        </p>
                         <i class="fa fa-play-circle"></i>
                       </a href="">
                     </div>
@@ -163,9 +154,6 @@ Informação de usuário:</h4>
                     <div class="title">
                       <h3>intérprete de saída<i class="fa fa-angle-down"></i></h3>
                       <a href="juegos/trivia/index-por.html">
-                        <p class="animate">
-                          <span>Play it</span>
-                        </p>
                         <i class="fa fa-play-circle"></i>
                       </a href="">
                     </div>
@@ -189,9 +177,6 @@ Informação de usuário:</h4>
                     <div class="title">
                       <h3>Discos <i class="fa fa-angle-down"></i></h3>
                       <a href="juegos/discos/index-por.html">
-                        <p class="animate">
-                          <span>Jogar</span>                      
-                        </p>
                         <i class="fa fa-play-circle"></i>
                       </a href="">
                     </div>
