listo login con instagram y mejoras trivia

--- a/MyApp/www/index-es.html
+++ b/MyApp/www/index-es.html
@@ -21,8 +21,8 @@
     <div class="index">
     <div class="UserPanel">
         <button class="Login">Login</button>
-        <button class="GetInfo">GetInfo</button>
-        <button class="Logout">Logout</button>
+        <button class="GetInfo">Perfil</button>
+        <button class="Logout">Cerrar Sesión</button>
       </div>
 
       <div class="modal fade" id="InfoModal" tabindex="-1" role="dialog" aria-labelledby="InfoModalLabel">
@@ -158,7 +158,7 @@
                     <ul class="detail" >                    
                       <li>          
                         <div class="col-img">
-                          <img class="img-responsive" src="img/fondoTrivia.PNG">
+                          <img class="img-responsive" src="img/fondoTrivia.png">
                         </div>
                         <div class="col-text">
                           <!--<h5>LOREM IPSUM DOLOR SIT AMET, CONSECTETUR ADIPISICING ELIT</h5>-->
