--- a/MyApp/www/index-por.html
+++ b/MyApp/www/index-por.html
@@ -20,9 +20,9 @@
   <body>
     <div class="index por">
           <div class="UserPanel">
-        <button class="Login">Login</button>
-        <button class="GetInfo">GetInfo</button>
-        <button class="Logout">Logout</button>
+        <button class="Login">Entrar</button>
+        <button class="GetInfo">Informação</button>
+        <button class="Logout">Sair</button>
       </div>
 
       <div class="modal fade" id="InfoModal" tabindex="-1" role="dialog" aria-labelledby="InfoModalLabel">
@@ -160,7 +160,7 @@ Informação de usuário:</h4>
                     <ul class="detail" >
                       <li>
                         <div class="col-img">
-                          <img class="img-responsive" src="img/fondoTrivia.PNG">
+                          <img class="img-responsive" src="img/fondoTrivia.png">
                         </div>
                         <div class="col-text">
                         
