--- a/MyApp/www/juegos/crucigrama/InternetGovernance-es.html
+++ b/MyApp/www/juegos/crucigrama/InternetGovernance-es.html
@@ -46,7 +46,9 @@
                           <h4>Nivel Completo</h4>
                           <div class="score">
                               Puntos: <div class="punto"> 0</div>
-                          </div>
+													</div>
+													<a class="fb-xfbml-parse-ignore" target="_blank"><button class="FB"></button></a>
+                          <button class="TW" onclick="public_TW()"></button> 
                       </div>
                   </div>
                   <div class="modal-footer">
@@ -69,7 +71,9 @@
                             <h4>Intentalo de nuevo!</h4>
                             <div class="score">
                               Puntos: <div class="punto"> 0</div>
-                          </div>
+													</div>
+													<a class="fb-xfbml-parse-ignore" target="_blank"><button class="FB"></button></a>
+                          <button class="TW" onclick="public_TW()"></button> 
                         </div>
                     </div>
                     <div class="modal-footer">
