--- a/MyApp/www/juegos/crucigrama/InternetGovernance-por.html
+++ b/MyApp/www/juegos/crucigrama/InternetGovernance-por.html
@@ -47,7 +47,9 @@
                           <h4>Nivel Máximo</h4>
                           <div class="score">
                               Ponto: <div class="punto"> 0</div>
-                          </div>
+													</div>
+													<a class="fb-xfbml-parse-ignore" target="_blank"><button class="FB"></button></a>
+                          <button class="TW" onclick="public_TW()"></button> 
                       </div>
                   </div>
                   <div class="modal-footer">
@@ -70,7 +72,9 @@
                             <h4>Tenta Novo</h4>
                             <div class="score">
                               Ponto: <div class="punto"> 0</div>
-                          </div>
+													</div>
+													<a class="fb-xfbml-parse-ignore" target="_blank"><button class="FB"></button></a>
+                          <button class="TW" onclick="public_TW()"></button> 
                         </div>
                     </div>
                     <div class="modal-footer">
