--- a/MyApp/www/juegos/crucigrama/crosswordip6-es.html
+++ b/MyApp/www/juegos/crucigrama/crosswordip6-es.html
@@ -39,7 +39,7 @@
                           <div class="score">
                               Puntos: <div class="punto"> 0</div>
                           </div>
-                          <button class="FB" onclick="public_FB()"></button>
+                          <a class="fb-xfbml-parse-ignore" target="_blank"><button class="FB"></button></a>
 						  <button class="TW" onclick="public_TW()"></button>
                       </div>
                   </div>
@@ -65,7 +65,7 @@
                             <div class="score">
                               Puntos: <div class="punto"> 0</div>
                           	</div>
-                          	<button class="FB" onclick="public_FB()"></button>
+                          	<a class="fb-xfbml-parse-ignore" target="_blank"><button class="FB"></button></a>
 							<button class="TW" onclick="public_TW()"></button>
                         </div>
                     </div>
