--- a/MyApp/www/juegos/crucigrama/crosswordip4-es.html
+++ b/MyApp/www/juegos/crucigrama/crosswordip4-es.html
@@ -48,7 +48,7 @@
                           <div class="score">
                               Puntos: <div class="punto"> </div>
                           </div>
-                          <button class="FB" onclick="public_FB()"></button>
+                          <a class="fb-xfbml-parse-ignore" target="_blank"><button class="FB"></button></a>
 						  <button class="TW" onclick="public_TW()"></button>
                       </div>
                   </div>
