--- a/MyApp/www/juegos/crucigrama/InternetGovernance.html
+++ b/MyApp/www/juegos/crucigrama/InternetGovernance.html
@@ -47,7 +47,7 @@
                           <div class="score">
                               Score: <div class="punto"> 0</div>
 													</div>
-													<a class="fb-xfbml-parse-ignore" target="_blank"><button class="FB"></button></a>
+													<a class="fb-xfbml-parse-ignore" target="_blank"><button class="FB"  onclick="public_FB()"></button></a>
                           <button class="TW" onclick="public_TW()"></button> 
                       </div>
                   </div>
@@ -72,7 +72,7 @@
                             <div class="score">
                               Score: <div class="punto"> 0</div>
 													</div>
-													<a class="fb-xfbml-parse-ignore" target="_blank"><button class="FB"></button></a>
+													<a class="fb-xfbml-parse-ignore" target="_blank"><button class="FB"  onclick="public_FB()"></button></a>
                           <button class="TW" onclick="public_TW()"></button> 
                         </div>
                     </div>
@@ -1641,7 +1641,13 @@
 	
 </div>
 
-
+<script>(function(d, s, id) {
+		var js, fjs = d.getElementsByTagName(s)[0];
+		if (d.getElementById(id)) return;
+		js = d.createElement(s); js.id = id;
+		js.src = "//connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.7";
+		fjs.parentNode.insertBefore(js, fjs);
+	}(document, 'script', 'facebook-jssdk'));</script>
 <!-- <script type="text/javascript" src="js/prueba.js"></script> -->
 
 <!--
