--- a/MyApp/www/juegos/Drag/ipv4.html
+++ b/MyApp/www/juegos/Drag/ipv4.html
@@ -104,7 +104,7 @@
                              
                                     Score: <div class="punto"> </div>
                                 </div>
-                                <a class="fb-xfbml-parse-ignore" target="_blank"><button class="FB"></button></a>
+                                <a class="fb-xfbml-parse-ignore" target="_blank"><button class="FB" onclick="public_FB()"></button></a>
                                 <button class="TW" onclick="public_TW()"></button>
                             </div>
                         </div>
@@ -130,7 +130,7 @@
                                 <div class="score">
                                     Score: <div class="punto">0</div>
                                 </div>
-                                <a class="fb-xfbml-parse-ignore" target="_blank"><button class="FB"></button></a>
+                                <a class="fb-xfbml-parse-ignore" target="_blank"><button class="FB" onclick="public_FB()"></button></a>
                                 <button class="TW" onclick="public_TW()"></button>
                             </div>
                         </div>
