--- a/MyApp/www/juegos/crucigrama/InternetGovernance-por.html
+++ b/MyApp/www/juegos/crucigrama/InternetGovernance-por.html
@@ -17,7 +17,10 @@
     <script src="../../js/governance.js"></script>
             <script src='../../js/openfb.js'></script>
         <script src='../../js/FbControllers.js'></script>
-        <script src='../../js/controllers.js'></script>
+				<script src='../../js/controllers.js'></script>
+				<script src='../../js/RegisterGame.js'></script>
+<script src='../../js/jsOAuth-1.3.7.js'></script>
+<script src="../../cordova.js"></script>
 </head>
 
 <body>
