--- a/MyApp/www/juegos/Drag/ipv4-es.html
+++ b/MyApp/www/juegos/Drag/ipv4-es.html
@@ -103,7 +103,7 @@
                           <div class="score">
                               Puntos: <div class="punto"> 0</div>
                           </div>
-                          <a class="fb-xfbml-parse-ignore" target="_blank"><button class="FB"></button></a>
+                          <a class="fb-xfbml-parse-ignore" target="_blank"><button class="FB" onclick="public_FB()"></button></a>
                           <button class="TW" onclick="public_TW()"></button>
                       </div>
                   </div>
@@ -129,7 +129,7 @@
                             <div class="score">
                               Puntos: <div class="punto"> 0</div>
                             </div>
-                            <a class="fb-xfbml-parse-ignore" target="_blank"><button class="FB"></button></a>
+                            <a class="fb-xfbml-parse-ignore" target="_blank"><button class="FB" onclick="public_FB()"></button></a>
                             <button class="TW" onclick="public_TW()"></button>
                         </div>
                     </div>
