--- a/MyApp/www/index.html
+++ b/MyApp/www/index.html
@@ -38,7 +38,7 @@
                 <!-- <button class="BtRegister">Register</button> -->
                 <button class="LoginFB">Login with Facebook</button>
                 <button class="LoginTwitter">Login with Twitter</button>
-                <button class="LoginInstagram">Login with Instagram</button>
+                <button class="LoginInstagram" onclick="lgIns()">Login with Instagram</button>
               </div>
             </div>
             <div class="modal-footer">
