--- a/MyApp/www/juegos/Memoria/index.html
+++ b/MyApp/www/juegos/Memoria/index.html
@@ -151,7 +151,7 @@
 
 
                                 <button class="TW" onclick="public_TW()"></button>
-                                <button class="IG" ></button>  
+                                <button class="IG" onclick="public_IG()"></button> 
 
                             </div>
                         </div>
