--- a/MyApp/www/index.html
+++ b/MyApp/www/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="icon" href="favicon.ico" type="img/fv-icon.png"/>
+    <link rel="icon" href="favicon.png" type="icon">
   </head>
 
   <script type="text/javascript">
@@ -39,7 +39,7 @@
                 <!-- <button class="BtRegister">Register</button> -->
                 <button class="LoginFB">Login with Facebook</button>
                 <button class="LoginTwitter">Login with Twitter</button>
-                <button class="LoginInstagram" onclick="lgIns()">Login with Instagram</button>
+                <button class="LoginInstagram">Login with Instagram</button>
               </div>
             </div>
             <div class="modal-footer">
@@ -230,6 +230,13 @@
                   </div>
                 </div>
 
+                <div>
+                  <h3>Animation</h3>
+                  <div class="setting animacion">
+                    <span class="on " onclick="Animacion(1)">On </span>  <span class="off " onclick="Animacion(0)"> Off</span>
+                  </div>
+                </div>
+
                <div>
                   <h3>Language</h3>
                 <div class="setting language">
@@ -284,6 +291,9 @@
                 <h2>SPONSOR</h2>
                   <a href="http://www.internetsociety.org/" target="_blank"><h4>ISOC</h4></a>
                   <a href="http://www.lacnic.net/web/lacnic/ipv6" target="_blank"><h4>LACNIC</h4></a>
+                  <h2>VERSION</h2>               
+                  <h4>"2.4"</h4> 
+                  <h4> Comp=29-01-2019</h4>
               </div>
             </div>
             <div class="modal-footer">
@@ -338,7 +348,7 @@
           <!-- // <script src="sounds/sound.js"></script> -->
         </footer>
     </div>
-    <h4 class="desc">Version="2.4" Comp=27-11-2018</h4>  
+    <h4 class="desc">Version="2.4" Comp=29-01-2019</h4>  
   </body>
 </html>
 
