--- a/MyApp/www/juegos/trivia/index-es.html
+++ b/MyApp/www/juegos/trivia/index-es.html
@@ -94,7 +94,7 @@
 
 	</div>
 
-	<a href="" onclick="history.back()"><div id="exit">Salir</div></a>
+	<a href="#" onclick="history.back()"><div id="exit">Salir</div></a>
 	
 </body>
 </html>
