--- a/MyApp/www/juegos/trivia/index-por.html
+++ b/MyApp/www/juegos/trivia/index-por.html
@@ -103,7 +103,7 @@
 
 	</div>
 
-	<a href="" onclick="history.back()"><div id="exit">Saída</div></a>
+	<a href="#" onclick="history.back()"><div id="exit">Saída</div></a>
 	
 </body>
 </html>
