--- a/MyApp/www/juegos/trivia/index.html
+++ b/MyApp/www/juegos/trivia/index.html
@@ -94,7 +94,7 @@
 
 		</div>
 
-	<a href="javascript:window.history.back();"><div id="exit">Back</div></a>
+	<a href="#" onclick="history.back()"><div id="exit">Back</div></a>
 	
 </body>
 </html>
