--- a/MyApp/www/index-por.html
+++ b/MyApp/www/index-por.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/styles.css">   
     <link rel="stylesheet" href="css/media.css">   
     <link rel="stylesheet" href="css/font-awesome.min.css">   
-    <link rel="icon" href="favicon.ico" type="img/fv-icon.png"/>  
+    <link rel="icon" href="favicon.png" type="icon">
   </head>
 
   <script type="text/javascript">
@@ -153,7 +153,7 @@ Informação de usuário:</h4>
                   </li> 
                   <li class="but">
                     <div class="title">
-                      <h3>intérprete de saída<i class="fa fa-angle-down"></i></h3>
+                      <h3>Interprete de saída<i class="fa fa-angle-down"></i></h3>
                       <a href="juegos/trivia/index-por.html">
                         <i class="fa fa-play-circle"></i>
                       </a href="">
@@ -232,6 +232,13 @@ Informação de usuário:</h4>
                   </div>
                 </div>
 
+                <div>
+                  <h3>Animação</h3>
+                  <div class="setting sound">
+                    <span class="on " onclick="Animacion(1)">Ignição </span>  <span class="off " onclick="Animacion(0)"> Fora</span>
+                  </div>
+                </div>
+
                <div>
                   <h3>Idioma</h3>
                 <div class="setting language">
@@ -285,6 +292,9 @@ Informação de usuário:</h4>
                 <h2>PATROCINADORES</h2>
                   <a href="http://www.internetsociety.org/" target="_blank"><h4>ISOC</h4></a>
                   <a href="http://www.lacnic.net/web/lacnic/ipv6" target="_blank"><h4>LACNIC</h4></a>
+                  <h2>VERSÃO</h2>               
+                  <h4>"2.4"</h4> 
+                  <h4> Comp=29-01-2019</h4>
               </div>
             </div>
             <div class="modal-footer">
@@ -339,6 +349,6 @@ Informação de usuário:</h4>
           <!-- // <script src="sounds/sound.js"></script> -->
         </footer>
     </div>
-    <h4 class="desc">Versão="2.4" Comp=26-11-2018</h4>
+    <h4 class="desc">Versão="2.4" Comp=29-01-2019</h4>
   </body>
 </html>
